added new thinngs with elem

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
-        android:title="Home" />
+        android:title="Database" />
     <item
         android:id="@+id/nav_loans"
         android:icon="@drawable/ic_loan"
-        android:title="Loans" />
+        android:title="Appointment" />
     <item
         android:id="@+id/nav_transactions"
         android:icon="@drawable/ic_transaction"
-        android:title="Transactions" />
+        android:title="Files" />
     <item
         android:id="@+id/nav_documents"
         android:icon="@drawable/ic_document"
-        android:title="Documents" />
+        android:title="Agents" />
 </menu> 
